objects/Branch1__c.object
<CustomObject>
    <fields>
        <fullName>Branch2__c</fullName>
        <label>Branch2</label>
        <referenceTo>Branch2__c</referenceTo>
        <relationshipLabel>Branch1</relationshipLabel>
        <relationshipName>Branch1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <defaultValue>&apos;Ad-11&apos;</defaultValue>
        <label>Branch Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewForm__c</fullName>
        <formula>Name +&apos;Text&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewForm</label>
        <type>Text</type>
    </fields>
    <label>Branch1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B!-{000}</displayFormat>
        <label>Branch1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>